Bug 1423242 - Lower the font-size of the spacer during Whimsypong on Linux to prevent it from getting cut off. r=mconley
MozReview-Commit-ID: LweMVGHexI6

UltraBlame original commit: 76b60be195005e4d24b8ff364f5b4ee91bf66ae4

--- a/browser/themes/shared/customizableui/customizeMode.inc.css
+++ b/browser/themes/shared/customizableui/customizeMode.inc.css
@@ -580,6 +580,14 @@ toolbarpaletteitem[place=toolbar] > toolbarspring {
   margin: 0 -7px;
 }
 
+%ifdef XP_UNIX
+%ifndef XP_MACOSX
+#customization-palette[whimsypong] > toolbarpaletteitem > toolbarspring {
+  font-size: 12px;
+}
+%endif
+%endif
+
 #wp-lives,
 #wp-ball {
   
